Why does MultiMC target me?